# solidity-service

./: .gitignore  LICENSE  README.md  default.nix  package.yaml  solidity-service.cabal  stack.yaml
app/: Main.hs
src/: Compilation.hs  PathUtils.hs  Riemann.hs  Webserver.hs
src/Data/Text/: Extra.hs
src/Webserver/: API.hs  Types.hs
test/: Ballot.sol  Ballot_Broken.sol  Collatz.sol  CompilationSpec.hs  ERC20.sol  Fibonacci.sol  PathUtilsSpec.hs  SendEther.sol  WebserverSpec.hs  assert.sol
test/Webserver/: Sol2IELEAST.json  Sol2IELEAsm1.json  Sol2IELEAsm2.json  SolidityCombined.json  TypesSpec.hs
